After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 329010 - Icon preview is very small on some images.
Icon preview is very small on some images.
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
2.31.x
Other All
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2006-01-28 21:13 UTC by Gabriel Gunderson
Modified: 2011-09-07 22:01 UTC
See Also:
GNOME target: ---
GNOME version: 2.31/2.32


Attachments
Icon preview is very small (4.62 KB, image/png)
2006-01-28 21:14 UTC, Gabriel Gunderson
  Details
proposed patch (508 bytes, patch)
2011-02-27 12:40 UTC, Stefano Teso
committed Details | Review

Description Gabriel Gunderson 2006-01-28 21:13:40 UTC
Please describe the problem:
When you have image (PNG in my case) that is very short and long the preview
doesn't show the right proportions.  The problem seems to show itself with
pictures 194x1px or wider.  These dimensions are common in web design when
filling an <div> with a repeating background image.

Steps to reproduce:
Make a image and look at the desktop icon.

Actual results:
Icon looks small 1x1px

Expected results:
See the 193x1px preview - it looks good.

Does this happen every time?
Yes.

Other information:
Comment 1 Gabriel Gunderson 2006-01-28 21:14:27 UTC
Created attachment 58292 [details]
Icon preview is very small
Comment 2 Marcus Carlson 2010-07-29 22:18:24 UTC
Still valid in 2.31.
Comment 3 Stefano Teso 2011-02-27 12:40:37 UTC
Created attachment 182038 [details] [review]
proposed patch

The attached patch should fix this issue. The problem is that for extreme height-to-width ratio images, gdk_pixbuf_scale_simple () is called with either width or height = 0 (printing a critical warning to the terminal.)
Comment 4 André Klapper 2011-08-11 12:32:29 UTC
(In reply to comment #2)
> Still valid in 2.31.

[Bumping version number.]
Comment 5 Cosimo Cecchi 2011-09-07 22:01:37 UTC
Thanks, I pushed this to master.