file: make sure not to use a 0 width/height when scaling the image

The problem is that for extreme height-to-width ratio images,
gdk_pixbuf_scale_simple () is called with either width or height = 0
(printing a critical warning to the terminal).

https://bugzilla.gnome.org/show_bug.cgi?id=329010